feat: docker installation role

--- a/ansible/playbooks/gitlab_installation.yml
+++ b/ansible/playbooks/gitlab_installation.yml
@@ -1,6 +1,7 @@
 ---
 - name: Server configuration
   hosts: gitlab
-  rolse:
+  become: yes
+  roles:
   - docker_installation
   - gitlab_configuration
