--- a/ansible/roles/docker_installation/tasks/main.yml
+++ b/ansible/roles/docker_installation/tasks/main.yml
@@ -1,3 +1,58 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # tasks file for docker_installation
+- name: Install dependencies
+  apt:
+    name:
+      - apt-transport-https
+      - ca-certificates
+      - curl
+      - gnupg
+      - lsb-release
+    state: present
+    update_cache: yes
+
+- name: Gather facts to get distribution info
+  setup:
+
+- name: Add Docker's GPG key
+  apt_key:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    state: present
+
+- name: Add Docker repo
+  apt_repository:
+    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+    state: present
+
+- name: Install Docker Engine
+  apt:
+    name:
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+      - docker-compose-plugin
+    state: present
+    update_cache: yes
+
+- name: Ensure that Docker is running
+  service:
+    name: docker
+    state: started
+    enabled: yes
+
+- name: Ensure that group docker exists
+  group:
+    name: docker
+    state: present
+
+- name: Add user to docker group
+  user:
+    name: "{{ ansible_user }}"
+    groups: docker
+    append: yes
+  register: user_added
+
+- name: Reset connection to apply group changes
+  meta: reset_connection
+  when: user_added.changed
