--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -1,6 +1,15 @@
 [gitlab]
-gitlab_server ansible_host=192.168.1.92 ansible_user=admin ansible_become_password="{{ gitlab_sudo }}"
+gitlab_server ansible_host=192.168.1.99 ansible_user=admin ansible_become_password="{{ gitlab_sudo }}"
 
-[web]
-stage ansible_host=192.168.1.97 ansible_user=admin ansible_become_password="{{ stage_sudo }}"
-prod ansible_host=192.168.1.98 ansible_user=admin ansible_become_password="{{ prod_sudo }}"
+[runner]
+runner_server ansible_host=192.168.1.102 ansible_user=admin ansible_become_password="{{ runner_sudo }}"
+
+[stage]
+stage_server ansible_host=192.168.1.100 ansible_user=admin ansible_become_password="{{ stage_sudo }}"
+
+[prod]
+prod_server ansible_host=192.168.1.101 ansible_user=admin ansible_become_password="{{ prod_sudo }}"
+
+[web:children]
+stage
+prod
