--- a/ansible/playbooks/setup-runner.yml
+++ b/ansible/playbooks/setup-runner.yml
@@ -1,7 +1,8 @@
 ---
-- name: Configure web servers
-  hosts: web
+- name: Setup Gitlab Runner
+  hosts: runner
   become: yes
   roles:
     - rsync
     - docker_installation
+    - setup_runner
