--- a/ansible/roles/gitlab_configuration/defaults/main.yml
+++ b/ansible/roles/gitlab_configuration/defaults/main.yml
@@ -1,3 +1,6 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # defaults file for gitlab_configuration
+gitlab_external_url: "{{ ansible_host | default(inventory_hostname) }}"
+gitlab_http_port: "80"
+gitlab_ssh_port: "2224"
